Remove sample post, change styling, add sections to site config, add sitemap.xml template

--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ markdown: kramdown
 
 # Don't put these in _site
 exclude: [config.rb, sass]
+
+domain_name: "www.magnarelli.org"
+nav_sections: ["who", "what", "when", "where", "why"]
